--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Meine Website</title>
-    <style type="text/css" rel="stylesheet" src="style.css"></style>
+    <link type="text/css" rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <h1>Fabian Ettinger</h1>    
+    <h1>Fabian Ettinger</h1>
+    <p>Das ist meine Website</p>
 </body>
 </html>
