--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 </head>
 
 <body>
-    <h1>Fabian Ettinger</h1>
-    <p>Das ist meine Website</p>
+    <main>
+        <h1>Fabian Ettinger</h1>
+        <p>Das ist meine Website</p>
+    </main>
 </body>
 </html>
