changed style.css and index.html

--- a/index.html
+++ b/index.html
@@ -11,7 +11,15 @@
 <body>
     <main>
         <h1>Fabian Ettinger</h1>
-        <p>Das ist meine Website</p>
+        <p>Ich bin 14 Jahre alt und besuche die 2. Klasse des Medientechnik-Zweigs der <a href="https://www.htl-leonding.at" target="_blank">HTL Leonding</a>.</p>
+        <p>Kompetenzen:<br><ul>
+            <li>Java</li>
+            <li>HTML</li>
+            <li>CSS</li>
+            <li>JavaScript</li>
+            <li>Adobe Creative Cloud</li>
+            <li>Microsoft Office</li>
+        </ul></p>
     </main>
 </body>
 </html>
