--- a/index.html
+++ b/index.html
@@ -1,25 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Meine Website</title>
     <link type="text/css" rel="stylesheet" href="style.css">
+    <script src="script.js" defer></script>
 </head>
 
 <body>
     <main>
         <h1>Fabian Ettinger</h1>
-        <p>Ich bin 16 Jahre alt und besuche die 2. Klasse des Medientechnik-Zweigs der <a href="https://www.htl-leonding.at" target="_blank">HTL Leonding</a>.</p>
-        <p>Kompetenzen:<br><ul>
-            <li>Java</li>
-            <li>HTML</li>
-            <li>CSS</li>
-            <li>JavaScript</li>
-            <li>Adobe Creative Cloud</li>
-            <li>Microsoft Office</li>
-        </ul></p>
+        <p>Ich bin 16 Jahre alt und besuche die 2. Klasse des Medientechnik-Zweigs der <a
+                href="https://www.htl-leonding.at" target="_blank">HTL Leonding</a>.</p>
+
+
+        <h2>Kompetenzen:</h2>
+        <section>
+            <ul>
+                <li>Java</li>
+                <li>HTML</li>
+                <li>CSS</li>
+                <li>JavaScript</li>
+                <li>Adobe Creative Cloud</li>
+                <li>Microsoft Office</li>
+            </ul>
+            <img id="logos">
+        </section>
+
+        <h2>Hobbys:</h2>
+        <section>
+            <ul id="hobbys">
+                <li>Klettern</li>
+                <li>Parcour</li>
+                <li>Lesen</li>
+                <li>Computerspiele</li>
+                <li>Programmieren</li>
+            </ul>
+        </section>
     </main>
 </body>
+
 </html>
